--- a/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
+++ b/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
@@ -10,6 +10,7 @@
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <Events>
+    <EventHandler event="windowGainedFocus" listener="java.awt.event.WindowFocusListener" parameters="java.awt.event.WindowEvent" handler="formWindowGainedFocus"/>
     <EventHandler event="windowLostFocus" listener="java.awt.event.WindowFocusListener" parameters="java.awt.event.WindowEvent" handler="formWindowLostFocus"/>
   </Events>
   <AuxValues>
@@ -537,7 +538,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="263" y="260" width="70" height="-1"/>
+                  <AbsoluteConstraints x="223" y="260" width="110" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
