--- a/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
+++ b/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
@@ -395,7 +395,7 @@
             <Component class="javax.swing.JSpinner" name="jSpinnerTRatioScale">
               <Properties>
                 <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="TRatioScaleSpinnerModel" type="code"/>
+                  <Connection code="new SpinnerNumberModel(0.00001, 0.0, 100.0, 0.00001)" type="code"/>
                 </Property>
                 <Property name="editor" type="javax.swing.JComponent" editor="org.netbeans.modules.form.editors.SpinnerEditorEditor">
                   <SpinnerEditor format="#.#####" type="3"/>
@@ -598,7 +598,7 @@
             <Component class="javax.swing.JSpinner" name="jSpinnerTRatioScale1">
               <Properties>
                 <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="TRatioScaleSpinnerModel" type="code"/>
+                  <Connection code="new SpinnerNumberModel(0.00001, 0.0, 100.0, 0.00001)" type="code"/>
                 </Property>
                 <Property name="editor" type="javax.swing.JComponent" editor="org.netbeans.modules.form.editors.SpinnerEditorEditor">
                   <SpinnerEditor format="#.#####" type="3"/>
