--- a/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
+++ b/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
@@ -492,9 +492,6 @@
                 <Property name="editor" type="javax.swing.JComponent" editor="org.netbeans.modules.form.editors.SpinnerEditorEditor">
                   <SpinnerEditor format="#" type="3"/>
                 </Property>
-                <Property name="value" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="0.01" type="code"/>
-                </Property>
               </Properties>
               <Events>
                 <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSpinnerEstSASimulationCountStateChanged"/>
@@ -776,13 +773,10 @@
             <Component class="javax.swing.JSpinner" name="jSpinnerEstSASimulationCount1">
               <Properties>
                 <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-                  <SpinnerModel initial="100" minimum="0" numberType="java.lang.Long" stepSize="10" type="number"/>
+                  <SpinnerModel initial="100" minimum="0" numberType="java.lang.Integer" stepSize="10" type="number"/>
                 </Property>
                 <Property name="editor" type="javax.swing.JComponent" editor="org.netbeans.modules.form.editors.SpinnerEditorEditor">
                   <SpinnerEditor format="#" type="3"/>
-                </Property>
-                <Property name="value" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="0.01" type="code"/>
                 </Property>
               </Properties>
               <Events>
