added percentage of done simulations

--- a/TOEDistributionServer/src/node/tns/views/index.jade
+++ b/TOEDistributionServer/src/node/tns/views/index.jade
@@ -15,6 +15,9 @@ block content
 
   #donesimulations
     p #{donesimulations} simulations done (current).
+    
+  #precentage
+    p #{percentagedone}% simulations done (current).
   
   div
     form(name="reset", action="/reset", method="post")
