Added link to stats

--- a/TOEDistributionServer/src/node/tns/views/index.html
+++ b/TOEDistributionServer/src/node/tns/views/index.html
@@ -11,5 +11,7 @@
 </head>
 <body>
 <h1>TimeNET Distribution server</h1>
+
+<div id="linkToStats"><a href="stats/" >--> Stats</a></div>
 </body>
 </html>
