--- a/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
+++ b/TimeNETOptimizationEnvironment/src/toe/optimization/OptimizerPreferences.form
@@ -1249,7 +1249,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel27">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Maximum Optiruns without improvment"/>
+                <Property name="text" type="java.lang.String" value="Maximum Optiruns without improvement"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JComboBox" name="jComboBoxGeneticTypeOfGeneticCrossing">
