fixed ui-deactivation during tasks

--- a/TimeNETOptimizationEnvironment/src/toe/MainFrame.form
+++ b/TimeNETOptimizationEnvironment/src/toe/MainFrame.form
@@ -190,7 +190,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jButtonEnterURLToSimServer" min="-2" pref="192" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="jButton1" min="-2" pref="100" max="-2" attributes="0"/>
+                                      <Component id="jButtonSetSecret" min="-2" pref="100" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jLabelDesignspaceSize" alignment="0" max="32767" attributes="0"/>
                               </Group>
@@ -338,7 +338,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jButtonEnterURLToSimServer" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
-                          <Component id="jButton1" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                          <Component id="jButtonSetSecret" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                       <Component id="jCheckBoxSlaveSimulator" min="-2" max="-2" attributes="0"/>
@@ -669,12 +669,12 @@
         <Property name="toolTipText" type="java.lang.String" value="How many optimizations will be run with the same settings"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="jButtonSetSecret">
       <Properties>
         <Property name="text" type="java.lang.String" value="Secret"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSetSecretActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="jCheckBoxDeleteTmpFiles">
