--- a/TimeNETOptimizationEnvironment/src/toe/MeasurementForm.form
+++ b/TimeNETOptimizationEnvironment/src/toe/MeasurementForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -19,16 +19,14 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jComboBoxOptimizationTarget" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jTextFieldCustomTargetValue" pref="170" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="jComboBoxOptimizationTarget" pref="82" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jSpinnerTargetValue" min="-2" pref="131" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jComboBoxMeasurementName" alignment="0" pref="204" max="32767" attributes="1"/>
+                  <Component id="jComboBoxMeasurementName" max="32767" attributes="1"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jCheckBoxEnableOptimizationForThisMeasurement" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -37,15 +35,11 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="jComboBoxMeasurementName" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jTextFieldCustomTargetValue" min="-2" max="-2" attributes="0"/>
-                  <Component id="jComboBoxOptimizationTarget" alignment="0" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jSpinnerTargetValue" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBoxOptimizationTarget" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-          </Group>
-          <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="jCheckBoxEnableOptimizationForThisMeasurement" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -72,19 +66,15 @@
         <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jComboBoxOptimizationTargetItemStateChanged"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextFieldCustomTargetValue">
+    <Component class="javax.swing.JSpinner" name="jSpinnerTargetValue">
       <Properties>
-        <Property name="text" type="java.lang.String" value="0"/>
-        <Property name="toolTipText" type="java.lang.String" value="Enter Custom Target Value for Measurement"/>
+        <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
+          <SpinnerModel initial="0.0" numberType="java.lang.Double" stepSize="0.001" type="number"/>
+        </Property>
+        <Property name="editor" type="javax.swing.JComponent" editor="org.netbeans.modules.form.editors.SpinnerEditorEditor">
+          <SpinnerEditor format="#.####" type="3"/>
+        </Property>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBoxEnableOptimizationForThisMeasurement">
-      <Properties>
-        <Property name="toolTipText" type="java.lang.String" value="Enable to optimize for this Measurement"/>
-      </Properties>
-      <Events>
-        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jCheckBoxEnableOptimizationForThisMeasurementItemStateChanged"/>
-      </Events>
     </Component>
   </SubComponents>
 </Form>
