--- a/TimeNETOptimizationEnvironment/src/toe/MeasurementForm.form
+++ b/TimeNETOptimizationEnvironment/src/toe/MeasurementForm.form
@@ -20,7 +20,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jComboBoxOptimizationTarget" pref="82" max="32767" attributes="0"/>
+                      <Component id="jComboBoxTargetType" pref="82" max="32767" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jSpinnerTargetValue" min="-2" pref="131" max="-2" attributes="0"/>
                   </Group>
@@ -37,7 +37,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jSpinnerTargetValue" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jComboBoxOptimizationTarget" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBoxTargetType" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -55,7 +55,7 @@
         <Property name="toolTipText" type="java.lang.String" value="Chose Measurement to optimize"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBoxOptimizationTarget">
+    <Component class="javax.swing.JComboBox" name="jComboBoxTargetType">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="new DefaultComboBoxModel(typeOfTarget.values())" type="code"/>
@@ -63,7 +63,7 @@
         <Property name="toolTipText" type="java.lang.String" value="Chose Optimization Target Value"/>
       </Properties>
       <Events>
-        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jComboBoxOptimizationTargetItemStateChanged"/>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jComboBoxTargetTypeItemStateChanged"/>
       </Events>
     </Component>
     <Component class="javax.swing.JSpinner" name="jSpinnerTargetValue">
