minor refactorings, added opticheckbutton

--- a/TimeNETOptimizationEnvironment/src/toe/MainFrame.form
+++ b/TimeNETOptimizationEnvironment/src/toe/MainFrame.form
@@ -214,17 +214,36 @@
                           <Component id="jButtonGenerateListOfExperiments" alignment="0" max="32767" attributes="1"/>
                           <Component id="jSeparator3" alignment="0" max="32767" attributes="1"/>
                           <Component id="jButtonStartBatchSimulation" alignment="0" max="32767" attributes="1"/>
-                          <Group type="102" alignment="1" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jLabelMemoryUsage" min="-2" pref="110" max="-2" attributes="0"/>
+                                  <Component id="jLabelTotalSimCount" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabelCacheSize" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="jLabelSimulationCountIndicator" alignment="0" min="-2" pref="152" max="-2" attributes="0"/>
+                                          <Component id="jLabelCachSizeIndicator" alignment="0" min="-2" pref="152" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="jProgressBarMemoryUsage" min="-2" pref="152" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Component id="jLabelSpinning" min="-2" pref="44" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                          </Group>
+                          <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="jLabelExportStatus" alignment="0" max="32767" attributes="0"/>
                                   <Group type="102" alignment="1" attributes="0">
                                       <Component id="jButtonLoadCacheFile" min="-2" pref="227" max="-2" attributes="0"/>
                                       <EmptySpace max="32767" attributes="0"/>
                                       <Component id="jButtonEmptyCache" min="-2" pref="106" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" attributes="0">
-                                      <Component id="jButtonStartOptimization" max="32767" attributes="1"/>
-                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="jSpinnerNumberOfOptimizationRuns" min="-2" pref="115" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
@@ -237,29 +256,16 @@
                                           <Component id="jComboBoxOptimizationType" alignment="0" pref="121" max="32767" attributes="1"/>
                                       </Group>
                                   </Group>
-                              </Group>
-                              <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabelExportStatus" min="-2" pref="265" max="-2" attributes="0"/>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jLabelMemoryUsage" min="-2" pref="110" max="-2" attributes="0"/>
-                                          <Component id="jLabelTotalSimCount" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jLabelCacheSize" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Component id="jButtonCheckOptimum" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jButtonStartOptimization" max="32767" attributes="1"/>
                                       </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jLabelSimulationCountIndicator" alignment="0" min="-2" pref="152" max="-2" attributes="0"/>
-                                          <Component id="jProgressBarMemoryUsage" min="-2" pref="152" max="-2" attributes="0"/>
-                                          <Component id="jLabelCachSizeIndicator" alignment="0" min="-2" pref="152" max="-2" attributes="0"/>
-                                      </Group>
+                                      <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
+                                      <Component id="jSpinnerNumberOfOptimizationRuns" min="-2" pref="139" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jLabelSpinning" min="-2" pref="18" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -317,7 +323,10 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-              <Component id="jLabelDesignspaceSize" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jLabelDesignspaceSize" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButtonCheckOptimum" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jButtonStartOptimization" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
@@ -727,6 +736,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Designspace size:"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButtonCheckOptimum">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Check Target"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCheckOptimumActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
