--- a/TimeNETOptimizationEnvironment/src/toe/MeasurementForm.form
+++ b/TimeNETOptimizationEnvironment/src/toe/MeasurementForm.form
@@ -54,6 +54,9 @@
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Chose Measurement to optimize"/>
       </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jComboBoxMeasurementNameItemStateChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="jComboBoxTargetType">
       <Properties>
@@ -75,6 +78,9 @@
           <SpinnerEditor format="#.####" type="3"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSpinnerTargetValueStateChanged"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
